--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
   <h1>기물 vs 폰: 특수 상황 모음</h1>
 
   <div class="item">
-    <a href="chess/bishop/primes.html">KB vs KP - WIN</a>
+    <a href="chess/bishop/kb_vs_kp_wdl_plus2.html">KB vs KP - WIN</a>
     <span class="desc">이론상 무승부임에도 불구하고 비숍을 가진 쪽이 이기는 208가지의 경우.</span>
   </div>
 
 </body>
 </html>
+
