--- a/index.html
+++ b/index.html
@@ -33,9 +33,26 @@
 
   <div class="item">
     <a href="chess/bishop/kb_vs_kp_wdl_plus2.html">KB vs KP - WIN</a>
-    <span class="desc">이론상 무승부임에도 불구하고 비숍을 가진 쪽이 이기는 208가지의 경우.</span>
+    <span class="desc">\n이론상 무승부임에도 불구하고 비숍을 가진 쪽이 이기는 208가지의 포지션.</span>
   </div>
+
+  <div class="item">
+    <a href="chess/bishop/kb_vs_kp_lose_4rank_same.html">KB vs KP - LOSS with 4th rank pawn (same color)</a>
+    <span class="desc">\n4랭크까지밖에 전진한 폰 상대로 지는 390가지의 포지션. (같은 색깔)</span>
+  </div>
+
+  <div class="item">
+    <a href="chess/bishop/kb_vs_kp_lose_4rank_diff.html">KB vs KP - LOSS with 4th rank pawn (different color)</a>
+    <span class="desc">\n4랭크까지밖에 전진한 폰 상대로 지는 12가지의 포지션. (다른 색깔)</span>
+  </div>
+
+  <div class="item">
+    <a href="chess/bishop/kb_vs_kp_lose_5rank.html">KB vs KP - LOSS with 5th rank pawn</a>
+    <span class="desc">\n5랭크까지밖에 전진한 폰 상대로 지는 4가지의 포지션.</span>
+  </div>
+
 
 </body>
 </html>
+
 
