--- a/index.html
+++ b/index.html
@@ -38,22 +38,23 @@
 
   <div class="item">
     <a href="chess/bishop/kb_vs_kp_lose_4rank_same.html">KB vs KP - LOSS with 4th rank pawn (same color)</a>
-    <div class="desc">4랭크까지밖에 전진한 폰 상대로 지는 390가지의 포지션. (같은 색깔)</div>
+    <div class="desc">4랭크까지밖에 전진하지 못한 폰 상대로 지는 390가지의 포지션. (같은 색깔)</div>
   </div>
 
   <div class="item">
     <a href="chess/bishop/kb_vs_kp_lose_4rank_diff.html">KB vs KP - LOSS with 4th rank pawn (different color)</a>
-    <div class="desc">4랭크까지밖에 전진한 폰 상대로 지는 12가지의 포지션. (다른 색깔)</div>
+    <div class="desc">4랭크까지밖에 전진하지 못한 폰 상대로 지는 12가지의 포지션. (다른 색깔)</div>
   </div>
 
   <div class="item">
     <a href="chess/bishop/kb_vs_kp_lose_5rank.html">KB vs KP - LOSS with 5th rank pawn</a>
-    <div class="desc">5랭크까지밖에 전진한 폰 상대로 지는 4가지의 포지션.</div>
+    <div class="desc">5랭크까지밖에 전진하지 못한 폰 상대로 지는 4가지의 포지션.</div>
   </div>
 
 
 </body>
 </html>
+
 
 
 
